jupyter variables check

--- a/test.ipynb
+++ b/test.ipynb
@@ -27,6 +27,32 @@
    "source": [
     "!cat /etc/os-release"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x + 10)"
+   ]
   }
  ],
  "metadata": {
