working on flask

--- a/test.ipynb
+++ b/test.ipynb
@@ -27,11 +27,21 @@
    "source": [
     "!cat /etc/os-release"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://wikidocs.net/81046\n",
+    "# 블루 프린트로 기능 분리하기"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('22pg')",
    "language": "python",
    "name": "python3"
   },
@@ -49,7 +59,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "1869ed633510c565c4cb4aeca52956bbd780e2eff34be0f41b5732bea1525f64"
+    "hash": "85f8b41f5d7d1615257f2159ca061563565cdc798b44f8f707071f0f5c5aeb06"
    }
   }
  },
